# grossiste_bot

./: .env.example  .gitignore  CLAUDE.md  README.md  catalog.db  pyproject.toml  railway.toml
.claude/agent-memory/pro-code-reviewer/: MEMORY.md
app/: crud.py  main.py  models.py
app/bot/: callbacks.py  keyboards.py  setup.py
app/bot/handlers/: catalog.py  start.py
app/core/: config.py  database.py
app/utils/: formatting.py
scripts/: seed_db.py  set_photo.py
